classDiagram
    class DatoUnaFacturaDto {
        +ClienteMovimientoDto clienteMovimiento
        +ArticuloMovimientoDto articuloMovimiento
    }

    class ClienteMovimientoDto {
        +Long clienteMovimientoId
        +Integer comprobanteId
        +Integer puntoVenta
        +long numeroComprobante
        +OffsetDateTime fechaComprobante
        +Long clienteId
        +BigDecimal importe
        +String letraComprobante
        +ComprobanteDto comprobante
        +ClienteDto cliente
        +MonedaDto moneda
    }

    class ArticuloMovimientoDto {
        +Long articuloMovimientoId
        +Long clienteMovimientoId
        +Integer centroStockId
        +String articuloId
        +BigDecimal cantidad
        +BigDecimal precioUnitario
        +ArticuloDto articulo
    }

    class ArticuloDto {
        +String articuloId
        +String descripcion
        +BigDecimal precioVentaConIva
        +Long cuentaVentas
    }

    class ClienteDto {
        +Long clienteId
        +String nombre
        +String cuit
    }

    class ComprobanteDto {
        +Integer comprobanteId
        +String descripcion
        +String letraComprobante
        +CuentaDto cuenta
    }
    
    class CuentaDto {
        +Long numeroCuenta
        +String nombre
    }

    class MonedaDto {
        +Integer monedaId
        +String nombre
        +String simbolo
    }

    class FacturacionDto {
        +Integer tipoDocumento
        +String documento
        +Integer tipoAfip
        +Integer puntoVenta
        +BigDecimal total
        +BigDecimal exento
        +BigDecimal neto
        +BigDecimal neto105
        +BigDecimal iva
        +BigDecimal iva105
        +String resultado
        +String cae
        +String vencimientoCae
        +Long numeroComprobante
        +String fechaComprobante
        +Integer asociadoTipoAfip
        +Integer asociadoPuntoVenta
        +Long asociadoNumeroComprobante
        +String asociadoFechaComprobante
        +Integer idCondicionIva
    }

    class OrderNoteDto {
        +Long orderNumberId
        +String orderStatus
        +OffsetDateTime orderDate
        +List<ProductDto> products
        +PaymentDto payment
    }

    class PaymentDto {
        +Long orderNumberId
        +String transaccionComercioId
        +String transaccionPlataformaId
        +InformacionPagadorDto informacionPagador
        +List<ProductTransactionDto> productTransactions
    }

    class ProductDto {
        +Long productId
        +Long orderNumberId
        +String sku
        +String name
        +Integer qty
    }

    class ProductTransactionDto {
        +Long productTransactionId
        +Long orderNumberId
        +String nombreProducto
    }

    class InformacionPagadorDto {
        +Long orderNumberId
        +String eMail
        +String nombre
    }

    DatoUnaFacturaDto o-- "1" ClienteMovimientoDto
    DatoUnaFacturaDto o-- "1" ArticuloMovimientoDto
    ClienteMovimientoDto o-- "1" ComprobanteDto
    ClienteMovimientoDto o-- "1" ClienteDto
    ClienteMovimientoDto o-- "1" MonedaDto
    ArticuloMovimientoDto o-- "1" ArticuloDto
    ComprobanteDto o-- "1" CuentaDto
    ArticuloMovimientoDto "1" -- "1" ClienteMovimientoDto : "relaciona a"
    OrderNoteDto o-- "*" ProductDto
    OrderNoteDto o-- "1" PaymentDto
    PaymentDto o-- "1" InformacionPagadorDto
    PaymentDto o-- "*" ProductTransactionDto